[package]
name = "traefik-cert-exporter"
version = "0.1.0"
authors = ["Aaron Zingerle <aaron.zingerle@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# logging
tracing = "0.1"
tracing-subscriber = { version = "0.2", features = ["chrono", "fmt"] }

# async
tokio = { version = "1", features = ["full"] }

# rest api
warp = "0.3"
